<resources>
    <string name="app_name">TimeWeiBo</string>
    <string name="home">微博</string>
    <string name="message">消息</string>
    <string name="me">我</string>
    <string name="concise_weibo">一个简洁的微博客户端</string>
    <string name="time">Time</string>
    <string name="auth_success">授权成功</string>
    <string name="auth_cancel">授权取消</string>
    <string name="auth_error">授权失败</string>
    <string name="auth_tip">继续授权</string>
    <string name="home_detail">微博正文</string>
    <string name="praise">次赞,</string>
    <string name="comment">条评论和</string>
    <string name="repost">条转发</string>
    <string name="save_image">保存图片</string>
    <string name="yi_save">已保存到相册</string>
    <string name="weibo">微博</string>
    <string name="following">关注</string>
    <string name="fans">粉丝</string>
    <string name="introduction">简介</string>
    <string name="photo">照片</string>
    <string name="collect">收藏</string>
    <string name="zai_an_yi_ci_tui_chu_app">再按一次退出程序</string>
    <string name="weibo_limit">由于微博接口限制，最多只能获取5条数据</string>
    <string name="comment1">评论</string>
    <string name="allcomment">所有评论</string>
    <string name="send_comment">发送</string>
    <string name="write_comment">写评论(140个字)...</string>
    <string name="send_weibo">发微博</string>
    <string name="send_comment1">发评论</string>
    <string name="forward_weibo">转发微博</string>
    <string name="share_weibo">分享新鲜事...</string>
    <string name="forward_weibo_hint">分享心得...</string>
    <string name="following1">关注人</string>
    <string name="api15">API限制只能获取15条信息</string>
    <string name="bu_duo_140">不能多于140个字</string>
    <string name="no_empty">不能为空</string>
    <string name="comments_success">评论成功</string>
    <string name="repost_success">转发成功</string>
    <string name="send_weibo_success">发送成功</string>
    <string name="zan_bu_ke_yon">暂不可用</string>
    <string name="api_limit">该用户未授权TimeWeiBo，因微博api限制不能查看此用户信息</string>
    <string name="nickname">昵称</string>
</resources>
