<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:gravity="center"
        android:text="@string/concise_weibo"
        android:textColor="@color/colorMainGray"
        android:textSize="@dimen/text_normal_xxx"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin4"
            android:layout_marginStart="@dimen/margin4"
            android:text="@string/time"
            android:textColor="@color/colorOrange"
            android:textSize="@dimen/text_normal_xxx"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin4"
            android:layout_marginStart="@dimen/margin4"
            android:text="@string/home"
            android:textColor="@color/colorMainDark"
            android:textSize="@dimen/text_normal_xxx"/>
    </LinearLayout>
</RelativeLayout>